# jftt

lab1/: Cargo.toml
lab1/automaton/: Cargo.toml
lab1/automaton/src/: automaton.rs
lab1/knuth_morris_pratt/: Cargo.toml
lab1/knuth_morris_pratt/src/: knuth_morris_pratt.rs
lab1/src/: main.rs
lab2/: 1.lex  2.lex  3.lex  4.lex  Makefile  test-calc.out.txt  test-calc.txt  test.txt  test1.xml  test2.html  test3.html  test4.cpp
lab2/test/*asdf*/: header.h
lab3/: Makefile  calc.lex  calc.y  main.c  result.h  test1.out.txt  test1.txt  test2.out.txt  test2.txt  test3.out.txt  test3.txt
lab3-rust/: Cargo.toml
lab3-rust/ast/: Cargo.toml
lab3-rust/ast/src/: ast.rs
lab3-rust/src/: calc.lalrpop  main.rs
